--- a/learn/rag.ipynb
+++ b/learn/rag.ipynb
@@ -43,6 +43,10 @@
       "Add of existing embedding ID: doc2\n",
       "Add of existing embedding ID: doc3\n",
       "Add of existing embedding ID: doc1\n",
+      "Add of existing embedding ID: doc2\n",
+      "Add of existing embedding ID: doc3\n",
+      "Add of existing embedding ID: doc4\n",
+      "Add of existing embedding ID: doc1\n",
       "Insert of existing embedding ID: doc1\n",
       "Add of existing embedding ID: doc2\n",
       "Insert of existing embedding ID: doc2\n",
@@ -83,15 +87,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Relevant doc: Neural networks are the foundation of deep learning.\n",
-      "Relevant doc: The Large Hadron Collider is the world's most powerful particle accelerator.\n"
+      "{'ids': [['doc2']], 'embeddings': None, 'documents': [[None]], 'uris': None, 'data': None, 'metadatas': [[{'text': 'Neural networks are the foundation of deep learning.'}]], 'distances': [[0.6330317968514281]], 'included': [<IncludeEnum.distances: 'distances'>, <IncludeEnum.documents: 'documents'>, <IncludeEnum.metadatas: 'metadatas'>]}\n",
+      "Relevant doc: Neural networks are the foundation of deep learning.\n"
      ]
     }
    ],
@@ -100,7 +104,7 @@
     "query_embedding = embed_model.encode(query).tolist()\n",
     "\n",
     "results = collection.query(query_embedding, n_results=2)\n",
-    "\n",
+    "print(results)\n",
     "\n",
     "for doc in results[\"metadatas\"][0]:\n",
     "    print(f\"Relevant doc: {doc['text']}\")"
@@ -108,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -137,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -169,7 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
